--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     -->
     <!-- <link href="https://cdn.bootcss.com/minireset.css/0.0.2/minireset.css" rel="stylesheet"> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>小小胡 || 小蝴蝶</title>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/average.ico">
+    <title>小前端'World</title>
   </head>
   <body>
     <noscript>
